--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,19 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <div class="row">
+       <div class="col-xs-4 col-xs-offset-2 " >
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/22/TripAdvisor_logo.svg/1280px-TripAdvisor_logo.svg.png" height="60" width="300">
+        <%= link_to 'New Restaurant', new_restaurant_path, :class => "btn btn-primary" %>
+        <%= yield %>
+       </div>
+     </div>
+    </div>
   </body>
 </html>
